--- a/views/search.pug
+++ b/views/search.pug
@@ -6,20 +6,24 @@ html
 			input(type="text" id="searchengine" name="search" placeholder="search") 
 			br 
 			input(type="submit" value="send")
+			div.emptyimg
 		
 		script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 		script.
 			$(document).ready(function(){
+				$('#searchengine').keyup(function() {
+					var search = {theresult:$('#searchengine').val()}
+					setTimeout(time, 300)
+				function time(){
+				$.post('/ajax', search, function(res) {
+					console.log(res);
+					$('.emptyimg').html(res);
+				});
+				};
 
-			$("#searchengine").keyup(function() {
-				var object1 = {
-					result:$('#searchengine').val()
-					}
+				});
 
 
-				$.post("/ajax", object1, function(res) {
-					$(".emptyimg").html("<img src='" + res[0] + "'/>");
-				})
+
 			});
 
-			})
