--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,9 @@ doctype html
 html
 		head
 		body
-			p hi
+			a(href='./') INDEX 
+			br
+			a(href='./searchBar') SEARCH
+			br
+			a(href='formPage') USERS
+			h1 HI WELCOME!
