--- a/views/results.pug
+++ b/views/results.pug
@@ -4,6 +4,11 @@ html
 	body
 		h1 Result page
 		br
+		a(href='./') INDEX 
+		br
+		a(href='./searchBar') SEARCH
+		br
+		a(href='formPage') USERS
 		if key === undefined
 			p There is no match found!
 		else
