--- a/views/users.pug
+++ b/views/users.pug
@@ -2,6 +2,11 @@ doctype html
 html
 		head
 		body
+			a(href='./') INDEX 
+			br
+			a(href='./searchBar') SEARCH
+			br
+			a(href='formPage') USERS
 			h1 List of users:
 			ul
 				each val in userlist
