--- a/views/messagebox.pug
+++ b/views/messagebox.pug
@@ -2,6 +2,11 @@ doctype html
 html
     head
     body
+        a(href='./') INDEX 
+        br
+        a(href='./searchBar') SEARCH
+        br
+        a(href='formPage') USERS
         h1 Add yourself as a user! 
         form(name="form", method="post", action="/formPageInfo")
             label(for="search")
